# IA-RESUMER

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  setup.py
docs/: README.md
src/: __init__.py
src/core/: audio_processor.py  config.py  summarizer.py  transcriber.py
src/utils/: file_handler.py  validators.py
tests/: test_setup.py  test_transcriber.py
